Fix vertical alignment of radio option to option value labels
This was broken by an earlier improvement to the flex-box hierarchy

--- a/src/components/side-panel/side-panel.css
+++ b/src/components/side-panel/side-panel.css
@@ -106,5 +106,7 @@
 }
 
 .property-option {
-  margin-top: 0.2rem;
+  display: flex;
+  align-items: center;
+  margin-top: 0.5rem;
 }
